soft_threshold module

--- a/analysis/minimal_loss.ipynb
+++ b/analysis/minimal_loss.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "318e0951-21c5-496e-aa93-587394a5c978",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VoronoiMesh version 0.1\n",
+      "DiscretePoisson version 0.3\n",
+      "Shape version: 0.1\n",
+      "SystEquations version: 0.3\n",
+      "Solver version 0.1\n"
+     ]
+    }
+   ],
    "source": [
     "import tinyarray as ta\n",
     "import numpy as np\n",
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c495bfa6-176b-47fc-8fae-aba23c7ef444",
    "metadata": {},
    "outputs": [],
@@ -38,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "328a91b2-d8b2-4dfd-9ec7-48e577aa65ba",
    "metadata": {},
    "outputs": [],
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bfb13a62-2ff2-4afa-a06b-ead696c58073",
    "metadata": {},
    "outputs": [
@@ -82,12 +94,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:33<00:00,  2.60s/it]\n"
+      "100%|██████████| 13/13 [00:34<00:00,  2.64s/it]\n"
      ]
     }
    ],
    "source": [
-    "system = trijunction.Trijunction(config, optimize_phase_pairs=['left-right'])"
+    "system = trijunction.Trijunction(config, optimize_phase_pairs=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51710114-e235-4036-af5e-c07e728a9d60",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Maximize couplings"
    ]
   },
   {
@@ -1144,22 +1167,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 368,
-   "id": "49d1b501-0929-4cde-869f-2cf334f85876",
+   "cell_type": "raw",
+   "id": "c957a9e1-71a0-4a51-a513-77502a6ab6ed",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'codes.optimization' from '/home/tinkerer/trijunction-design/analysis/codes/optimization.py'>"
-      ]
-     },
-     "execution_count": 368,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "import codes.optimization\n",
     "import codes.utils\n",
@@ -1169,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 6,
    "id": "93cb9e54-cc72-44de-b036-5d642431ce9b",
    "metadata": {},
    "outputs": [],
@@ -1179,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 7,
    "id": "bf6e66c8-eaad-442e-97e0-01ab52846081",
    "metadata": {
     "tags": []
@@ -1187,7 +1197,7 @@
    "outputs": [],
    "source": [
     "gates_dict = zip(system.gate_names, system.gates_vertex)\n",
-    "indices = codes.utils.dep_acc_index(\n",
+    "indices = dep_acc_index(\n",
     "    gates_dict,\n",
     "    system.nw_centers,\n",
     "    kwant_sites,\n",
@@ -1200,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 8,
    "id": "6632d33f-aadf-477c-a27e-d6364df9c7a9",
    "metadata": {},
    "outputs": [
@@ -1229,139 +1239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
-   "id": "c10739aa-079d-434e-beb8-593bf0f574ad",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "initial_condition = (-1.5e-3, -1.5e-3, -1.5e-3, 3e-3)\n",
-    "args = tuple([system.linear_terms, indices, ['right', 'top']])\n",
-    "sol = minimize(fun=codes.optimization.shape_loss, x0=initial_condition, args=args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 377,
-   "id": "acad9246-2b23-48d3-8d38-35ae30568f48",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.00619886, -0.00360979, -0.0036203 ,  0.00092894])"
-      ]
-     },
-     "execution_count": 377,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sol.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "id": "224c97ba-8d2f-4fbd-a73e-c1bcbe8c33e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'codes.tools' from '/home/tinkerer/trijunction-design/analysis/codes/tools.py'>"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import codes.constants\n",
-    "import codes.tools\n",
-    "importlib.reload(codes.tools)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 557,
-   "id": "55022caf-363c-4908-90e4-967835ac386a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loss_wavefunctions(wfs, indices, pair):\n",
-    "    gain = dict.fromkeys(pair, [])\n",
-    "    for gate, index in indices.items():\n",
-    "        if gate[:-1] in pair:\n",
-    "            a = gain[gate[:-1]].copy()\n",
-    "            a.append(np.abs(wfs[index]))\n",
-    "            gain.update({gate[:-1]: a})\n",
-    "    sum_gain = np.sum(list(gain.values()), axis=1)\n",
-    "    if np.all(sum_gain > 1e-5) and (0.5<sum_gain[0]/sum_gain[1]<1.5):\n",
-    "        return -1\n",
-    "    return -(sum(sum_gain)) + np.sum(np.diff(list(gain.values()), axis=0))\n",
-    " \n",
-    "    \n",
-    "\n",
-    "def soft_threshold(indices, linear_ham, pair, mu=bands[0]):\n",
-    "\n",
-    "    loss = 0\n",
-    "\n",
-    "    for gate, index in indices.items():\n",
-    "        diff = np.real(linear_ham[index]) - mu\n",
-    "\n",
-    "        if gate[:-1] in pair:\n",
-    "            if diff > 0:\n",
-    "                loss += diff\n",
-    "        else:\n",
-    "            if diff < 0:\n",
-    "                loss += diff\n",
-    "    return np.abs(loss)\n",
-    "\n",
-    "\n",
-    "def full(x, *argv):\n",
-    "\n",
-    "    base_hamiltonian, linear_terms = argv[0]\n",
-    "    density_operator = argv[1]\n",
-    "    indices = argv[2]\n",
-    "    pair = argv[3]\n",
-    "    print(x)\n",
-    "    voltages = parameters.voltage_dict(x)\n",
-    "\n",
-    "    linear_ham, full_hamiltonian = codes.tools.hamiltonian(\n",
-    "        base_hamiltonian, linear_terms, **voltages\n",
-    "    )\n",
-    "    linear_ham = linear_ham.diagonal()[::4]\n",
-    "    potential_shape_loss = soft_threshold(\n",
-    "        indices, linear_ham, pair\n",
-    "    )\n",
-    "    \n",
-    "    if potential_shape_loss < 1e-9:\n",
-    "        evals, evecs = eigsh(\n",
-    "            full_hamiltonian, k=6, sigma=0, return_eigenvectors=True\n",
-    "        )\n",
-    "        return loss_wavefunctions(\n",
-    "            density_operator(evecs[:,-1]), indices, pair\n",
-    "        )\n",
-    "    return potential_shape_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 9,
    "id": "bdb4d67e-e40f-414d-9d17-dc8d70adce1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "params = parameters.junction_parameters()\n",
     "params.update(potential=system.flat_potential())\n",
-    "base_ham = system.trijunction.hamiltonian_submatrix(\n",
-    "    sparse=True, params=system.f_params(**params)\n",
-    ")\n",
-    "args = ((base_ham, system.linear_terms), \n",
+    "# base_ham = system.trijunction.hamiltonian_submatrix(\n",
+    "#     sparse=True, params=system.f_params(**params)\n",
+    "# )\n",
+    "args = ((system.base_ham, system.linear_terms), \n",
     "        system.densityoperator, \n",
     "        indices, \n",
     "        ['top', 'right'])"
@@ -1369,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 10,
    "id": "f054c368-38a1-4b6b-b109-63963e79f3f0",
    "metadata": {},
    "outputs": [],
@@ -1379,7 +1267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 12,
+   "id": "82af28cf-5105-4f37-890d-dde373034d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from codes.optimization import soft_threshold_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "b4ee6e1b-03df-4060-8cad-278e227f5f23",
    "metadata": {
     "tags": []
@@ -1389,85 +1287,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.0015 -0.0015 -0.0015  0.003 ]\n",
-      "[-0.00150001 -0.0015     -0.0015      0.003     ]\n",
-      "[-0.0015     -0.00150001 -0.0015      0.003     ]\n",
-      "[-0.0015     -0.0015     -0.00150001  0.003     ]\n",
-      "[-0.0015     -0.0015     -0.0015      0.00300001]\n",
       "| niter |f evals|CG iter|  obj func   |tr radius |   opt    |  c viol  |\n",
       "|-------|-------|-------|-------------|----------|----------|----------|\n",
       "|   1   |   5   |   0   | +1.9176e-02 | 1.00e-03 | 4.70e+00 | 0.00e+00 |\n",
-      "[-0.0022907  -0.00185502 -0.00185679  0.00265149]\n",
-      "[-0.00229071 -0.00185502 -0.00185679  0.00265149]\n",
-      "[-0.0022907  -0.00185504 -0.00185679  0.00265149]\n",
-      "[-0.0022907  -0.00185502 -0.00185681  0.00265149]\n",
-      "[-0.0022907  -0.00185502 -0.00185679  0.00265151]\n",
       "|   2   |  10   |   1   | +1.3233e-02 | 7.00e-03 | 4.70e+00 | 0.00e+00 |\n",
-      "[-0.00782558 -0.00434019 -0.00435433  0.00021195]\n",
-      "[-0.00782559 -0.00434019 -0.00435433  0.00021195]\n",
-      "[-0.00782558 -0.0043402  -0.00435433  0.00021195]\n",
-      "[-0.00782558 -0.00434019 -0.00435435  0.00021195]\n",
-      "[-0.00782558 -0.00434019 -0.00435433  0.00021197]\n",
       "|   3   |  15   |   2   | +5.6460e-03 | 7.00e-03 | 3.35e+00 | 0.00e+00 |\n",
-      "[-0.01116945 -0.00123588 -0.00059545  0.00396063]\n",
-      "[-0.01116946 -0.00123588 -0.00059545  0.00396063]\n",
-      "[-0.01116945 -0.00123589 -0.00059545  0.00396063]\n",
-      "[-0.01116945 -0.00123588 -0.00059547  0.00396063]\n",
-      "[-0.01116945 -0.00123588 -0.00059545  0.00396065]\n",
       "|   4   |  20   |   4   | +5.2242e-03 | 7.00e-03 | 1.95e+00 | 0.00e+00 |\n",
-      "[-0.01149541 -0.00411614 -0.00447287  0.00901666]\n",
-      "[2.28525190e-05 5.72615699e-04]\n",
-      "[-0.01149542 -0.00411614 -0.00447287  0.00901666]\n",
-      "[2.28512999e-05 5.72612765e-04]\n",
-      "[-0.01149541 -0.00411616 -0.00447287  0.00901666]\n",
-      "[2.28485954e-05 5.72575112e-04]\n",
-      "[-0.01149541 -0.00411614 -0.00447289  0.00901666]\n",
-      "[2.28412209e-05 5.72615425e-04]\n",
-      "[-0.01149541 -0.00411614 -0.00447287  0.00901668]\n",
-      "[2.28596929e-05 5.72634555e-04]\n",
       "|   5   |  25   |   6   | -4.5705e-05 | 1.40e-02 | 1.52e+00 | 0.00e+00 |\n",
-      "[-0.01105276 -0.01205385 -0.00169185  0.02019981]\n",
-      "[-0.01105277 -0.01205385 -0.00169185  0.02019981]\n",
-      "[-0.01105276 -0.01205387 -0.00169185  0.02019981]\n",
-      "[-0.01105276 -0.01205385 -0.00169187  0.02019981]\n",
-      "[-0.01105276 -0.01205385 -0.00169185  0.02019982]\n",
       "|   6   |  30   |   8   | -4.5705e-05 | 6.14e-03 | 1.52e+00 | 0.00e+00 |\n",
-      "[-1.45934938e-02 -2.09901925e-03 -9.11196363e-05  1.12197555e-02]\n",
-      "[-1.45935087e-02 -2.09901925e-03 -9.11196363e-05  1.12197555e-02]\n",
-      "[-1.45934938e-02 -2.09903415e-03 -9.11196363e-05  1.12197555e-02]\n",
-      "[-1.45934938e-02 -2.09901925e-03 -9.11345375e-05  1.12197555e-02]\n",
-      "[-1.45934938e-02 -2.09901925e-03 -9.11196363e-05  1.12197704e-02]\n",
       "|   7   |  35   |  10   | -4.5705e-05 | 3.07e-03 | 1.52e+00 | 0.00e+00 |\n",
-      "[-0.01122801 -0.00325551 -0.00199464  0.01059027]\n",
-      "[-0.01122803 -0.00325551 -0.00199464  0.01059027]\n",
-      "[-0.01122801 -0.00325552 -0.00199464  0.01059027]\n",
-      "[-0.01122801 -0.00325551 -0.00199465  0.01059027]\n",
-      "[-0.01122801 -0.00325551 -0.00199464  0.01059028]\n",
       "|   8   |  40   |  11   | -4.5705e-05 | 1.54e-03 | 1.52e+00 | 0.00e+00 |\n",
-      "[-0.01136171 -0.00368583 -0.00323376  0.00980346]\n",
-      "[0.00108823 0.00195314]\n",
-      "returning zero\n",
-      "[-0.01136173 -0.00368583 -0.00323376  0.00980346]\n",
-      "[0.00108822 0.00195315]\n",
-      "returning zero\n",
-      "[-0.01136171 -0.00368584 -0.00323376  0.00980346]\n",
-      "[0.00108822 0.00195319]\n",
-      "returning zero\n",
-      "[-0.01136171 -0.00368583 -0.00323377  0.00980346]\n",
-      "[0.0010882  0.00195315]\n",
-      "returning zero\n",
-      "[-0.01136171 -0.00368583 -0.00323376  0.00980348]\n",
-      "[0.00108824 0.00195311]\n",
-      "returning zero\n",
       "|   9   |  45   |  12   | -1.0000e+00 | 1.07e-02 | 0.00e+00 | 0.00e+00 |\n",
       "\n",
       "`gtol` termination condition is satisfied.\n",
-      "Number of iterations: 9, function evaluations: 45, CG iterations: 12, optimality: 0.00e+00, constraint violation: 0.00e+00, execution time: 5.2e+01 s.\n"
+      "Number of iterations: 9, function evaluations: 45, CG iterations: 12, optimality: 0.00e+00, constraint violation: 0.00e+00, execution time: 5.8e+01 s.\n"
      ]
     }
    ],
    "source": [
-    "sol1 = minimize(full, \n",
+    "%%time\n",
+    "\n",
+    "sol1 = minimize(soft_threshold_loss, \n",
     "         x0=initial_condition, \n",
     "         args=args, \n",
     "         method='trust-constr', \n",
@@ -1478,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 14,
    "id": "67796ce0-f7a0-4517-a59c-770e0c387d3f",
    "metadata": {},
    "outputs": [],
@@ -1488,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 16,
    "id": "7b1818a0-e545-4bb0-9e8f-7cdb2a863560",
    "metadata": {},
    "outputs": [],
@@ -1500,14 +1340,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 18,
+   "id": "39f3302c-f6e0-46f0-80b0-f0ea52350a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from codes.constants import bands\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "493a25d4-8afd-43d3-9ba2-2324c93805b8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "linear_ham, full_ham = hamiltonian(system.trijunction, \n",
+    "linear_ham, full_ham = hamiltonian(system.base_ham, \n",
     "                                   system.linear_terms, \n",
     "                                   system.f_params, \n",
     "                                   **params)\n",
@@ -1518,17 +1368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 21,
    "id": "3f41393e-f20b-4cff-861c-04c07bd54c54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "evals, evecs = codes.utils.eigsh(full_ham, k=6, sigma=0, return_eigenvectors=True)"
+    "evals, evecs = eigsh(full_ham, k=6, sigma=0, return_eigenvectors=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 22,
    "id": "df1d36cc-e3c9-4515-aee3-dac163c8715d",
    "metadata": {},
    "outputs": [],
@@ -1543,17 +1393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 23,
    "id": "632123cc-0b7b-4f5a-af2a-7b57b644e2f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8.381095880543918e-06, 3.319535100892065e-08)"
+       "(8.381095441027058e-06, 3.3195351923493304e-08)"
       ]
      },
-     "execution_count": 566,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 24,
    "id": "f1beaedf-c8c7-457f-9012-9b4e13ec8891",
    "metadata": {},
    "outputs": [],
@@ -1574,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 25,
    "id": "6aa07800-98cc-46df-b95f-e89842704ff1",
    "metadata": {},
    "outputs": [
@@ -1599,6 +1449,14 @@
     "    axes.set_ylim(-3e-7, 10e-7)\n",
     "    axes.set_xlim(-3e-7, 3e-7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edd23f87-8e90-44ac-aa58-3b6c970c5728",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
