assert all nanowires have same width and topological gap

--- a/analysis/gapsize.ipynb
+++ b/analysis/gapsize.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "611510eb-3cda-4c09-9565-07c019052112",
    "metadata": {},
    "outputs": [],
@@ -52,17 +52,19 @@
     "    config = json.load(f)\n",
     "\n",
     "change_config = [\n",
-    "    {\"device\": {\"thickness\": {\"dielectric\": 1.0}}},\n",
-    "    {\"gate\": {\"channel_width\": 13.0, 'angle': np.pi/6, 'gap': 2}},\n",
+    "     {\"device\":\n",
+    "     {\"grid_spacing\":\n",
+    "      {\"twoDEG\": 1, \"normal\": 1, \"dielectric\": 1, \"air\": 5, \"gate\": 1, \"substrate\": 1}}},\n",
+    "    {\"gate\": {\"channel_width\": 13.0, \"L\":40, 'angle': np.pi/6, 'gap': 4}},\n",
+    "    {\"kwant\": {\"nww\":8}}\n",
     "]\n",
-    "\n",
     "for local_config in change_config:\n",
     "    config = dict_update(config, local_config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "46c40bc3-fcaf-4e4a-9148-21ac758acd22",
    "metadata": {},
    "outputs": [
@@ -87,32 +89,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:32<00:00,  2.53s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0290534390214568e-05 4.974282352164559e-07\n",
-      "2.0877243010561442e-05 5.131665907143299e-07\n",
-      "1.5384314766911517e-05 1.8928229932274477e-07\n",
-      "2.161029888182414e-05 4.90929527140218e-06\n",
-      "1.9248350710050024e-05 3.3150127183267296e-07\n",
-      "2.1646471194178855e-05 7.922102618431248e-07\n",
-      "2.1931534110631754e-05 1.1679044743660732e-06\n",
-      "2.1715346335069582e-05 8.46750607678081e-07\n",
-      "2.174092239742077e-05 8.703169886288324e-07\n",
-      "2.175269997249036e-05 8.819125439350105e-07\n",
-      "2.1751164984257493e-05 8.803725938418134e-07\n",
-      "2.175105983724621e-05 8.802674287715426e-07\n",
-      "2.1751080999003375e-05 8.802885908365767e-07\n",
-      "2.175103867481846e-05 8.802462676566353e-07\n"
+      "100%|██████████| 13/13 [00:08<00:00,  1.52it/s]\n"
      ]
     }
    ],
    "source": [
-    "system = trijunction.Trijunction(config)"
+    "system = trijunction.Trijunction(config, optimize_phase_pairs=[])"
    ]
   },
   {
